Thu Dec 06 18:59:34 GMT 2001  Olly Betts <olly@survex.com>

	* If a stemmer is set, and all_stem isn't, only stemmer terms starting with a
	  lowercase letter.

Thu Dec 06 18:49:40 GMT 2001  Olly Betts <olly@survex.com>

	* parsequery.yy: changed to use find_if() (faster than find_first_of()).

Thu Dec 06 17:46:37 GMT 2001  Olly Betts <olly@survex.com>

	* Base page links on estimated number of matches, not minimum.

Wed Dec 05 17:07:33 GMT 2001  Olly Betts <olly@survex.com>

	* omindex: minor speed tweaks.

Wed Dec 05 16:52:21 GMT 2001  Olly Betts <olly@survex.com>

	* omindex: further HTML parser speed-ups.

Wed Dec 05 16:31:33 GMT 2001  Olly Betts <olly@survex.com>

	* omindex: sped up HTML parsing.

Wed Dec 05 14:52:53 GMT 2001  Olly Betts <olly@survex.com>

	* omindex: parsing terms from text is now twice as fast.

Thu Nov 29 16:53:45 GMT 2001  Olly Betts <olly@survex.com>

	* NEAR phrases (e.g. "a NEAR b NEAR c") now work; removed "{a b c}" syntax for
	  NEAR phrases.

Thu Nov 29 15:25:54 GMT 2001  Olly Betts <olly@survex.com>

	* $highlight{} now allows you to specify the tags to use for the
	  highlighting.

Thu Nov 29 15:24:53 GMT 2001  Olly Betts <olly@survex.com>

	* topdoc is unsigned so subtracting and then checking if it's < 0 doesn't
	  work...

Wed Nov 28 15:45:39 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed clipping of hit page in case when there are a multiple of HITSPERPAGE
	  matches. 

Wed Nov 28 14:03:48 GMT 2001  Olly Betts <olly@survex.com>

	* Added $hostname{URL}; $version output now says "Xapian - omega <version>".

Wed Nov 28 13:04:46 GMT 2001  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt: Minor corrections and updates.

Wed Nov 28 13:03:40 GMT 2001  Olly Betts <olly@survex.com>

	* If we're asked for a page of hits beyond the end of the matches, clip to the
	  last page of matches rather than the first.

Wed Nov 28 13:02:31 GMT 2001  Olly Betts <olly@survex.com>

	* For an EXTENDED_QUERY, force the first page of hits.
